base/deployment-mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: nextcloud-db
  template:
    metadata:
      labels:
        deployment: nextcloud-db
    spec:
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: pvc-mariadb
      containers:
        - name: mariadb
          image: registry.redhat.io/rhel8/mariadb-105
          resources: {}
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
