base/deployment-nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: nextcloud
  template:
    metadata:
      labels:
        deployment: nextcloud
    spec:
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: pvc-nextcloud
      containers:
        - name: nextcloud
          image: nextcloud
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
