base/route-nextcloud.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  to:
    kind: Service
    name: nextcloud
  port:
    targetPort: 80
